--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3"
     }
 }
